compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__functions__provide_one_arg_type_to_two_args_fn.snap
---
source: compiler-core/src_refactored/__core/type_/tests/functions.rs
assertion_line: 553
expression: "\npub fn main() {\n   let a = #(1,2)\n   fn(x, y) { x.0 + y.1 }(a)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
   let a = #(1,2)
   fn(x, y) { x.0 + y.1 }(a)
}


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:4:4
  │
4 │    fn(x, y) { x.0 + y.1 }(a)
  │    ^^^^^^^^^^^^^^^^^^^^^^^^^ Expected 2 arguments, got 1


error: Type mismatch
  ┌─ /src/one/two.gleam:4:15
  │
4 │    fn(x, y) { x.0 + y.1 }(a)
  │               ^ What type is this?

To index into a tuple we need to know its size, but we don't know anything
about this type yet. Please add some type annotations so we can continue.

error: Type mismatch
  ┌─ /src/one/two.gleam:4:21
  │
4 │    fn(x, y) { x.0 + y.1 }(a)
  │                     ^ What type is this?

To index into a tuple we need to know its size, but we don't know anything
about this type yet. Please add some type annotations so we can continue.
